updated webpack configurationa and package.json

--- a/src/client/view/template.html
+++ b/src/client/view/template.html
@@ -6,6 +6,6 @@
     <title>Travel Planner App</title>
 </head>
 <body>
-    <h1>My Trip</h1>
+    <section class="hero-section"></section>
 </body>
 </html>
