--- a/src/client/view/template.html
+++ b/src/client/view/template.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Planner App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="hero-section"></section>
+    <section class="no-trips"></section>
+    <footer></footer>
 </body>
 </html>
