added styles for every component & add & form func

--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -1,5 +1,6 @@
 $light-green: #FAFFFD;
 $dark-grey: #2F2E41;
+$dark-green: #3e5c55;
 $font-family: 'Montserrat Alternates', sans-serif;
 $font-light: 500;
 $font-medium: 600;
