--- a/src/client/styles/hero-section.scss
+++ b/src/client/styles/hero-section.scss
@@ -27,6 +27,12 @@
         .add-icon{
             width: 2rem;
             display: none;
+            cursor: pointer;
+            transition: transform 300ms ease-in-out;
+
+            &:hover{
+                transform: scale(1.2);
+            }
         }
     }
 
