--- a/src/client/styles/no-trips-section.scss
+++ b/src/client/styles/no-trips-section.scss
@@ -2,14 +2,22 @@
 @import 'variables.scss';
 
 .no-trips{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: block;
+    text-align: center;
     padding-top: 9.625rem;
-    flex: 1 0 auto;
-    
+
     .add-icon{
         width: 5rem;
         padding-top: 1.625rem;
+        cursor: pointer;
+        transition: transform 300ms ease-in-out;
+
+        &:hover{
+            transform: scale(0.8);
+        }
     }
+}
+
+.no-trips.hidde{
+    display: none;
 }
