--- a/src/client/styles/footer.scss
+++ b/src/client/styles/footer.scss
@@ -3,15 +3,7 @@
 
 footer{
     padding: 2rem 0;
-
-    &::before{
-        content: '';
-        display: block;
-        background-color: $dark-grey;
-        width: 90%;
-        height: 1px;
-        margin: 2rem auto;
-    }
+    background-color: $light-green;
 
     p{
         font-size: 0.75rem;
