added check for trips functionality

--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -45,8 +45,8 @@
             transition: color 300ms ease-in-out;
             z-index: 999;
             
-            #cancel:hover,
-            #save:hover{
+            .cancel:hover,
+            .save:hover{
                 color: $dark-green;
             }
         }
