--- a/src/client/view/template.html
+++ b/src/client/view/template.html
@@ -14,8 +14,8 @@
     <div class="modal-form">
         <form>
             <div class="buttons">
-                <a id="cancel">Cancel</a>
-                <a id="save">Save</a>
+                <a id="close-form" class="cancel">Cancel</a>
+                <a id="close-form" class="save">Save</a>
             </div>
 
             <fieldset>
