--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -7,3 +7,4 @@ $font-medium: 600;
 $font-bold: 700;
 $black: #000;
 $box-shadow: 0px 1px 30px -3px rgba($black, 0.15);
+$box-shadow-desktop: -8px 1px 28px -3px rgba($black, 0.15);
