--- a/src/client/styles/footer.scss
+++ b/src/client/styles/footer.scss
@@ -1,12 +1,31 @@
 @import 'resets.scss';
 @import 'variables.scss';
+@import 'breakpoints.scss';
 
 footer{
     padding: 2rem 0;
     background-color: $light-green;
+    box-shadow: 0px -6px 38px 0px rgb(0,0,0,0.1);
+
+    @include for-desktop{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        box-shadow: -8px 24px 28px 0px rgb(0 0 0 / 15%);
+    }
 
     p{
         font-size: 0.75rem;
         text-align: center;
+        margin-bottom: 0.5rem;
+        color: $dark-grey;
+
+        a{
+            color: $dark-green;
+        }
+
+        @include for-desktop{
+            font-size: 0.8rem;
+        }
     }
 }
