--- a/src/client/styles/hero-section.scss
+++ b/src/client/styles/hero-section.scss
@@ -1,12 +1,25 @@
 @import 'resets.scss';
 @import 'variables.scss';
+@import 'breakpoints.scss';
+
 
 .hero-section{
     background-color: $light-green;
     box-shadow: $box-shadow;
 
+    @include for-desktop{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        box-shadow: $box-shadow-desktop;
+    }
+
     .title-wrapper{
         padding-top: 2.25rem;
+
+        @include for-tablet{
+            padding-top: 3.5rem;
+        }
 
         .title-app{
             text-align: center;
@@ -16,12 +29,28 @@
             h1{
                 font-size: 2.25rem;
                 font-weight: $font-bold;
+
+                @include for-tablet{
+                    font-size: 2rem;
+                }
+
+                @include for-desktop{
+                    font-size: 1.8rem;
+                }
             }
 
             h3{
                 font-size: 0.6875rem;
                 font-weight: $font-light;
                 padding-top: 0.5rem;
+
+                @include for-tablet{
+                    font-size: 1rem;
+                }
+
+                @include for-desktop{
+                    font-size: 0.8rem;
+                }
             }
         }
         .add-icon{
@@ -33,6 +62,14 @@
             &:hover{
                 transform: scale(1.2);
             }
+
+            @include for-tablet{
+                width: 3rem;
+            }
+
+            @include for-desktop{
+                margin: 2rem 0;
+            }
         }
     }
 
@@ -41,6 +78,13 @@
         margin: 0 auto;
         display: block;
         padding-top: 2.9375rem;
+        max-width: 250px;
+
+
+        @include for-desktop{
+            width: 60%;
+        }
+
     }
 }
 
@@ -53,10 +97,22 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 2rem;
+
+    @include for-tablet{
+        margin: 0 5rem;
+    }
+
+    @include for-desktop{
+        flex-direction: column;
+    }
 }
 
 .title-wrapper.active .title-app{
     text-align: left;
+
+    @include for-desktop{
+        text-align: center;
+    }
 }
 
 .title-wrapper.active .add-icon{
