--- a/src/client/styles/no-trips-section.scss
+++ b/src/client/styles/no-trips-section.scss
@@ -1,16 +1,34 @@
 @import 'resets.scss';
 @import 'variables.scss';
+@import 'breakpoints.scss';
 
 .no-trips{
     display: block;
     text-align: center;
     padding-top: 6.625rem;
 
+    @include for-tablet{
+        padding-top: 9.625rem;
+        font-size: 1rem;
+    }
+
+    @include for-desktop{
+        grid-column: 2/3;
+        grid-row: 1/3;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
+    }
+
     .add-icon{
         width: 5rem;
         padding-top: 1.625rem;
         cursor: pointer;
         transition: transform 300ms ease-in-out;
+
 
         &:hover{
             transform: scale(0.8);
