installed service worker

--- a/src/client/view/template.html
+++ b/src/client/view/template.html
@@ -34,5 +34,12 @@
     </div>
     <div class="overlay"></div>
     <footer></footer>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
 </body>
 </html>
