added local storage functionality. Added trips will be saved to local stroage and loaded upon document loading.

--- a/src/client/view/template.html
+++ b/src/client/view/template.html
@@ -34,12 +34,12 @@
     </div>
     <div class="overlay"></div>
     <footer></footer>
-    <script>
+    <!-- <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js');
             });
         }
-    </script>
+    </script> -->
 </body>
 </html>
